# sentiment_analysis-service

./: LICENSE  README.md  pyproject.toml  requirements.txt
sentiment-analysis-service/: main.py
