[project]
name = "sentiment-analysis-api"
version = "0.1.0"
description = ""
authors = [
    {name = "lucasfelipecastro",email = "lucassantanafelipe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
